// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accessibility/VisuallyHidden Visually Hidden Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div
      className="sc-idiyUo maA-dp"
    />
  </div>,
]
`;

exports[`Storyshots Buttons/Button Bookmark Lesson Button Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ bprpIx"
        disabled={false}
        onClick={[Function]}
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Buttons/Button/Button As Link Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
    title="Click me"
  >
    <div
      className="sc-papXJ eImoDj"
      size="small"
    >
      <span
        className="sc-ftvSup gyzHhj"
      >
        Click me
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Button/Button Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ bprpIx"
    title="Click me"
  >
    <div
      className="sc-papXJ eImoDj"
      size="small"
    >
      <span
        className="sc-ftvSup gyzHhj"
      >
        Click me
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Buttons/Button/Icon Button As Link Icon Button As Link 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <a
    aria-label="Click me"
    href="/"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    role="button"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi hhriQA"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          className="sc-dkzDqf iDtTay"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </a>,
]
`;

exports[`Storyshots Buttons/Button/Icon Button Icon Button 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <button
    aria-label="Click me"
    className="sc-bczRLJ bprpIx"
    title="Click me"
  >
    <div
      className="sc-hKMtZM dzHdVU"
      size="small"
    >
      <span
        className="sc-gsnTZi hhriQA"
        style={
          Object {
            "height": "16px",
            "width": "16px",
          }
        }
      >
        <span
          className="sc-dkzDqf iDtTay"
          style={
            Object {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <svg
            fill="none"
            height="100%"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2.5"
            viewBox="0 0 24 24"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
            />
            <polyline
              points="7 10 12 15 17 10"
            />
            <line
              x1="12"
              x2="12"
              y1="15"
              y2="3"
            />
          </svg>
        </span>
      </span>
    </div>
  </button>,
]
`;

exports[`Storyshots Buttons/Buttons Button Group 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-jqUVSM kKkhXV"
  >
    <a
      aria-label="Download Lesson"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      title="Download Lesson"
    >
      <div
        className="sc-papXJ eImoDj"
        size="small"
      >
        <span
          className="sc-iBkjds kyChGO"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                />
                <polyline
                  points="7 10 12 15 17 10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="15"
                  y2="3"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-ftvSup gyzHhj"
        >
          Download
        </span>
      </div>
    </a>
    <a
      aria-label="Share Lesson"
      href="/"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      role="button"
      title="Share Lesson"
    >
      <div
        className="sc-papXJ eImoDj"
        size="small"
      >
        <span
          className="sc-iBkjds kyChGO"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="18"
                  cy="5"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="12"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="19"
                  r="3"
                />
                <line
                  x1="8.59"
                  x2="15.42"
                  y1="13.51"
                  y2="17.49"
                />
                <line
                  x1="15.41"
                  x2="8.59"
                  y1="6.51"
                  y2="10.49"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="sc-ftvSup gyzHhj"
        >
          Share
        </span>
      </div>
    </a>
  </div>,
]
`;

exports[`Storyshots Cards/Card Card Default 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <div
      className="sc-kDDrLX lACOA"
    >
      <h2>
        Card title
      </h2>
      <p>
        You can put anything you like in here.
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Feedback/LoadingSpinner Loading Spinner 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <span
    className="sc-evZas gKBAUq"
  >
    <span
      className="sc-crXcEl dotaGp"
    >
      Loading
    </span>
  </span>,
]
`;

exports[`Storyshots Foundations/Typography Typography Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <h2
      className="typography--variant-h2"
    >
      h2
    </h2>
  </div>,
]
`;

exports[`Storyshots Headers & Footers/LessonHeader Lesson Header 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-iqcoie dlpbQT"
  >
    <h1 />
    <div
      className="sc-jqUVSM kKkhXV"
    >
      <a
        aria-label="Download Lesson"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        title="Download Lesson"
      >
        <div
          className="sc-papXJ eImoDj"
          size="small"
        >
          <span
            className="sc-iBkjds kyChGO"
          >
            <span
              className="sc-gsnTZi hhriQA"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <span
                className="sc-dkzDqf iDtTay"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <svg
                  fill="none"
                  height="100%"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2.5"
                  viewBox="0 0 24 24"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                  />
                  <polyline
                    points="7 10 12 15 17 10"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="15"
                    y2="3"
                  />
                </svg>
              </span>
            </span>
          </span>
          <span
            className="sc-ftvSup gyzHhj"
          >
            Download
          </span>
        </div>
      </a>
      <a
        aria-label="Share Lesson"
        href="/"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        role="button"
        title="Share Lesson"
      >
        <div
          className="sc-papXJ eImoDj"
          size="small"
        >
          <span
            className="sc-iBkjds kyChGO"
          >
            <span
              className="sc-gsnTZi hhriQA"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <span
                className="sc-dkzDqf iDtTay"
                style={
                  Object {
                    "height": "16px",
                    "width": "16px",
                  }
                }
              >
                <svg
                  fill="none"
                  height="100%"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2.5"
                  viewBox="0 0 24 24"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="18"
                    cy="5"
                    r="3"
                  />
                  <circle
                    cx="6"
                    cy="12"
                    r="3"
                  />
                  <circle
                    cx="18"
                    cy="19"
                    r="3"
                  />
                  <line
                    x1="8.59"
                    x2="15.42"
                    y1="13.51"
                    y2="17.49"
                  />
                  <line
                    x1="15.41"
                    x2="8.59"
                    y1="6.51"
                    y2="10.49"
                  />
                </svg>
              </span>
            </span>
          </span>
          <span
            className="sc-ftvSup gyzHhj"
          >
            Share
          </span>
        </div>
      </a>
      <button
        aria-label="Add Bookmark"
        className="sc-bczRLJ bprpIx"
        disabled={false}
        onClick={[Function]}
        title="Add Bookmark"
      >
        <div
          className="sc-hKMtZM dzHdVU"
          size="small"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "16px",
                "width": "16px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "16px",
                  "width": "16px",
                }
              }
            >
              <svg
                fill="currentColor"
                viewBox="2 2 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </div>
      </button>
    </div>
  </header>,
]
`;

exports[`Storyshots Headers & Footers/SiteFooter Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <footer
      className="sc-ksZaOG iXGais"
    >
      © Oak National Academy 
      2022
    </footer>
  </div>,
]
`;

exports[`Storyshots Headers & Footers/SiteHeader Site Footer Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <header
      className="sc-hAZoDl bvfFhh"
    >
      <div
        className="sc-fnykZs bDCbZL"
      >
        Oak
      </div>
      <form
        className="sc-breuTD kTOiHc"
        onSubmit={[Function]}
      >
        <input
          aria-label="Search"
          onChange={[Function]}
          placeholder="Search"
          type="search"
          value=""
        />
        <button
          type="submit"
        >
          Submit
        </button>
        <div>
          <label>
             Key Stage 
            foundation
            <input
              checked={false}
              id="custom-checkbox-foundation"
              name="foundation"
              onChange={[Function]}
              type="checkbox"
              value="foundation"
            />
          </label>
        </div>
        <div>
          <label>
             Key Stage 
            1
            <input
              checked={false}
              id="custom-checkbox-1"
              name="1"
              onChange={[Function]}
              type="checkbox"
              value="1"
            />
          </label>
        </div>
        <div>
          <label>
             Key Stage 
            2
            <input
              checked={false}
              id="custom-checkbox-2"
              name="2"
              onChange={[Function]}
              type="checkbox"
              value="2"
            />
          </label>
        </div>
        <div>
          <label>
             Key Stage 
            3
            <input
              checked={false}
              id="custom-checkbox-3"
              name="3"
              onChange={[Function]}
              type="checkbox"
              value="3"
            />
          </label>
        </div>
        <div>
          <label>
             Key Stage 
            4
            <input
              checked={false}
              id="custom-checkbox-4"
              name="4"
              onChange={[Function]}
              type="checkbox"
              value="4"
            />
          </label>
        </div>
      </form>
      <div
        className="sc-bjUoiL CQHoK"
      >
        <button
          className="sc-bczRLJ sc-fEOsli bprpIx decobD"
          onClick={[Function]}
        >
          pupils
        </button>
        <a
          href="/sign-in"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Sign in
        </a>
      </div>
    </header>
  </div>,
]
`;

exports[`Storyshots Inputs/search Search Form 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <form
    className="sc-breuTD kTOiHc"
    onSubmit={[Function]}
  >
    <input
      aria-label="Search"
      onChange={[Function]}
      placeholder="Search"
      type="search"
      value=""
    />
    <button
      type="submit"
    >
      Submit
    </button>
    <div>
      <label>
         Key Stage 
        foundation
        <input
          checked={false}
          id="custom-checkbox-foundation"
          name="foundation"
          onChange={[Function]}
          type="checkbox"
          value="foundation"
        />
      </label>
    </div>
    <div>
      <label>
         Key Stage 
        1
        <input
          checked={false}
          id="custom-checkbox-1"
          name="1"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </label>
    </div>
    <div>
      <label>
         Key Stage 
        2
        <input
          checked={false}
          id="custom-checkbox-2"
          name="2"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </label>
    </div>
    <div>
      <label>
         Key Stage 
        3
        <input
          checked={false}
          id="custom-checkbox-3"
          name="3"
          onChange={[Function]}
          type="checkbox"
          value="3"
        />
      </label>
    </div>
    <div>
      <label>
         Key Stage 
        4
        <input
          checked={false}
          id="custom-checkbox-4"
          name="4"
          onChange={[Function]}
          type="checkbox"
          value="4"
        />
      </label>
    </div>
  </form>,
]
`;

exports[`Storyshots Media/Icon Icon Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <span
      className="sc-gsnTZi hhriQA"
      style={
        Object {
          "height": "100px",
          "width": "100px",
        }
      }
    >
      <span
        className="sc-dkzDqf iDtTay"
        style={
          Object {
            "height": "100px",
            "width": "100px",
          }
        }
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2.5"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Navigation/Breadcrumbs Breadcrumb Example 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=Lexend:wght@300&display=swap"
    rel="stylesheet"
  />,
  <link
    href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"
    rel="stylesheet"
  />,
  <div>
    <nav
      aria-label="Breadcrumb"
      className="sc-eCYdqJ gnWbIo"
    >
      <ol
        className="sc-jSMfEi fQHTXe"
      >
        <li
          className="sc-gKXOVf XuDYs"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Unit Quiz
          </a>
        </li>
        <li
          className="sc-gKXOVf XuDYs"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            View In Classroom
          </a>
        </li>
        <li
          className="sc-gKXOVf XuDYs"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Foundation Curriculum (PDF)
          </a>
        </li>
        <li
          className="sc-gKXOVf XuDYs"
        >
          <span
            className="sc-gsnTZi hhriQA"
            style={
              Object {
                "height": "20px",
                "width": "20px",
              }
            }
          >
            <span
              className="sc-dkzDqf iDtTay"
              style={
                Object {
                  "height": "20px",
                  "width": "20px",
                }
              }
            >
              <svg
                fill="none"
                height="100%"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2.5"
                viewBox="0 0 24 24"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="9 18 15 12 9 6"
                />
              </svg>
            </span>
          </span>
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Higher Curriculum (PDF)
          </a>
        </li>
      </ol>
    </nav>
  </div>,
]
`;
